# src/unitysvc_sellers/_generated/api/seller_service_groups/groups_get.py
@@ -1,20 +1,16 @@
 from http import HTTPStatus
 from typing import Any, cast
 from urllib.parse import quote
+from uuid import UUID
 
 import httpx
 
-from ...client import AuthenticatedClient, Client
-from ...types import Response, UNSET
 from ... import errors
-
+from ...client import AuthenticatedClient, Client
 from ...models.error_response import ErrorResponse
 from ...models.http_validation_error import HTTPValidationError
 from ...models.service_group_public import ServiceGroupPublic
-from ...types import UNSET, Unset
-from typing import cast
-from uuid import UUID
-
+from ...types import UNSET, Response, Unset
 
 
 def _get_kwargs(
@@ -22,7 +18,6 @@ def _get_kwargs(
     *,
     authorization: None | str | Unset = UNSET,
     x_role_id: None | str | Unset = UNSET,
-
 ) -> dict[str, Any]:
     headers: dict[str, Any] = {}
     if not isinstance(authorization, Unset):
@@ -31,49 +26,37 @@ def _get_kwargs(
     if not isinstance(x_role_id, Unset):
         headers["x-role-id"] = x_role_id
 
-
-
-    
-
-    
-
     _kwargs: dict[str, Any] = {
         "method": "get",
-        "url": "/service-groups/{group_id}".format(group_id=quote(str(group_id), safe=""),),
+        "url": "/service-groups/{group_id}".format(
+            group_id=quote(str(group_id), safe=""),
+        ),
     }
-
 
     _kwargs["headers"] = headers
     return _kwargs
 
 
-
-def _parse_response(*, client: AuthenticatedClient | Client, response: httpx.Response) -> ErrorResponse | HTTPValidationError | ServiceGroupPublic | None:
+def _parse_response(
+    *, client: AuthenticatedClient | Client, response: httpx.Response
+) -> ErrorResponse | HTTPValidationError | ServiceGroupPublic | None:
     if response.status_code == 200:
         response_200 = ServiceGroupPublic.from_dict(response.json())
-
-
 
         return response_200
 
     if response.status_code == 400:
         response_400 = ErrorResponse.from_dict(response.json())
 
-
-
         return response_400
 
     if response.status_code == 404:
         response_404 = ErrorResponse.from_dict(response.json())
 
-
-
         return response_404
 
     if response.status_code == 422:
         response_422 = HTTPValidationError.from_dict(response.json())
-
-
 
         return response_422
 
@@ -83,7 +66,9 @@ def _parse_response(*, client: AuthenticatedClient | Client, response: httpx.Res
         return None
 
 
-def _build_response(*, client: AuthenticatedClient | Client, response: httpx.Response) -> Response[ErrorResponse | HTTPValidationError | ServiceGroupPublic]:
+def _build_response(
+    *, client: AuthenticatedClient | Client, response: httpx.Response
+) -> Response[ErrorResponse | HTTPValidationError | ServiceGroupPublic]:
     return Response(
         status_code=HTTPStatus(response.status_code),
         content=response.content,
@@ -98,9 +83,8 @@ def sync_detailed(
     client: AuthenticatedClient | Client,
     authorization: None | str | Unset = UNSET,
     x_role_id: None | str | Unset = UNSET,
-
 ) -> Response[ErrorResponse | HTTPValidationError | ServiceGroupPublic]:
-    """ Get Seller Group
+    """Get Seller Group
 
      Get a service group by ID.
 
@@ -115,14 +99,12 @@ def sync_detailed(
 
     Returns:
         Response[ErrorResponse | HTTPValidationError | ServiceGroupPublic]
-     """
-
+    """
 
     kwargs = _get_kwargs(
         group_id=group_id,
-authorization=authorization,
-x_role_id=x_role_id,
-
+        authorization=authorization,
+        x_role_id=x_role_id,
     )
 
     response = client.get_httpx_client().request(
@@ -131,15 +113,15 @@ x_role_id=x_role_id,
 
     return _build_response(client=client, response=response)
 
+
 def sync(
     group_id: UUID,
     *,
     client: AuthenticatedClient | Client,
     authorization: None | str | Unset = UNSET,
     x_role_id: None | str | Unset = UNSET,
-
 ) -> ErrorResponse | HTTPValidationError | ServiceGroupPublic | None:
-    """ Get Seller Group
+    """Get Seller Group
 
      Get a service group by ID.
 
@@ -154,16 +136,15 @@ def sync(
 
     Returns:
         ErrorResponse | HTTPValidationError | ServiceGroupPublic
-     """
-
+    """
 
     return sync_detailed(
         group_id=group_id,
-client=client,
-authorization=authorization,
-x_role_id=x_role_id,
-
+        client=client,
+        authorization=authorization,
+        x_role_id=x_role_id,
     ).parsed
+
 
 async def asyncio_detailed(
     group_id: UUID,
@@ -171,9 +152,8 @@ async def asyncio_detailed(
     client: AuthenticatedClient | Client,
     authorization: None | str | Unset = UNSET,
     x_role_id: None | str | Unset = UNSET,
-
 ) -> Response[ErrorResponse | HTTPValidationError | ServiceGroupPublic]:
-    """ Get Seller Group
+    """Get Seller Group
 
      Get a service group by ID.
 
@@ -188,21 +168,18 @@ async def asyncio_detailed(
 
     Returns:
         Response[ErrorResponse | HTTPValidationError | ServiceGroupPublic]
-     """
-
+    """
 
     kwargs = _get_kwargs(
         group_id=group_id,
-authorization=authorization,
-x_role_id=x_role_id,
-
+        authorization=authorization,
+        x_role_id=x_role_id,
     )
 
-    response = await client.get_async_httpx_client().request(
-        **kwargs
-    )
+    response = await client.get_async_httpx_client().request(**kwargs)
 
     return _build_response(client=client, response=response)
+
 
 async def asyncio(
     group_id: UUID,
@@ -210,9 +187,8 @@ async def asyncio(
     client: AuthenticatedClient | Client,
     authorization: None | str | Unset = UNSET,
     x_role_id: None | str | Unset = UNSET,
-
 ) -> ErrorResponse | HTTPValidationError | ServiceGroupPublic | None:
-    """ Get Seller Group
+    """Get Seller Group
 
      Get a service group by ID.
 
@@ -227,13 +203,13 @@ async def asyncio(
 
     Returns:
         ErrorResponse | HTTPValidationError | ServiceGroupPublic
-     """
+    """
 
-
-    return (await asyncio_detailed(
-        group_id=group_id,
-client=client,
-authorization=authorization,
-x_role_id=x_role_id,
-
-    )).parsed
+    return (
+        await asyncio_detailed(
+            group_id=group_id,
+            client=client,
+            authorization=authorization,
+            x_role_id=x_role_id,
+        )
+    ).parsed
